--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -6,7 +6,17 @@ $red: #8a2a2b;        //red
 $yellow: #cba052;     //yellow
 $rust: #6f2c3f;		    //rust
 $black: #2C2C33;     //black
+$flagship_icon: flagship-icon; //flagship icon
 
 $font-stack: 'gentona-light', Arial, sans-serif;
 $font-header: 'quadon', Arial, sans-serif;
 $font-subhead: 'gentona-book', Arial, sans-serif;
+
+$radius: 10px;
+
+//flagship icon urls
+$flagship-icon_url_0: url(../fonts/flagship-icon.eot);
+$flagship-icon_url_1: url(../fonts/flagship-icon.eot?#iefix);
+$flagship-icon_url_2: url(../fonts/flagship-icon.svg#flagship-icon);
+$flagship-icon_url_3: url(../fonts/flagship-icon.woff);
+$flagship-icon_url_4: url(../fonts/flagship-icon.ttf);
