editing font-size for media queries

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -32,6 +32,9 @@ h4, h5, h6, .semibold {
   font-style: normal;
 }
 
+h1 { font-size: 2.35rem; }
+h2 { font-size: 2rem; }
+
 
 //strong, b, .bold
 %extend_1 {
