--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -3,7 +3,7 @@ nav ul {
 }
 
 .nav-bar > li > a:first-child {
-  font-size: 18px;
+  font-size: inherit;
   color: #ccc;
   padding: 0 24px;
 }
@@ -38,7 +38,7 @@ nav ul {
         padding: 0 18px;
       }
       a {
-        font-size: 18px;
+        font-size: inherit;
         color: #FFF;
       }
       ul {
