logo_nav h1 padding-right

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -64,6 +64,7 @@
   h1 {
     margin: 30px 0 0 280px;
     line-height: 1.1em;
+    padding-right: 3px;
     span.small {
       display: block;
       line-height: 1em;
