--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -118,9 +118,9 @@ nav ul {
   background: none;
 }
 
-#main_nav ul li.logo.active a:hover, .mobile-logo a:hover {
+/*#main_nav ul li.logo.active a:hover, .mobile-logo a:hover {
   background: url('../img/logo.png') no-repeat top;
-}
+}*/
 
 #main_nav {
   li {
