--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,4 +1,4 @@
-#logo_nav li.logo, .mobile-logo {
+/*#logo_nav li.logo, .mobile-logo {
   width: 222px;
   height: 162px;
   padding: 0;
@@ -20,26 +20,50 @@
   position: absolute;
   top: 20px;
   left: 20px;
+}*/
+
+li.logo { 
+  list-style: none;
+  img {
+  background: #000;
+  background: rgba(0,0,0,0.75);
+  margin-left: 5px;
+  padding: 20px 10px 10px;
+  margin-top: -61px;
+  -webkit-border-bottom-right-radius: 20px;
+  -webkit-border-bottom-left-radius: 20px;
+  -moz-border-radius-bottomright: 20px;
+  -moz-border-radius-bottomleft: 20px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
 }
 
 .mobile-logo {
   position: relative;
   height: 122px;
-  a {
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+  }
+ /* a {
     background: url('../images/logo.png') no-repeat top;
     width: 222px;
     height: 133px;
     margin-top: -61px;
     text-indent: -9999px;
     position: absolute;
-  }
+  }*/
 }
 
-#logo_nav li.logo {
+/*#logo_nav li.logo {
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.75);
   margin-left: 24px;
-}
+}*/
 
 .mobile-logo {
   a {
@@ -60,9 +84,10 @@
   -moz-border-radius-topleft: 10px;
   border-top-left-radius: 10px;
   margin: 0;
-  padding-bottom: 20px;
+  /*padding-bottom: 20px;*/
   h1 {
-    margin: 30px 0 0 280px;
+    /*margin: 30px 0 0 280px;*/
+    margin-top:30px;
     line-height: 1.1em;
     padding-right: 3px;
     span.small {
