new header logo for mobile

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -35,7 +35,7 @@
   }
 }
 
-/*Foundation Tab Titles*/
+//Foundation Tab Titles
 
 .single-people .tabs {
   dd a, li a {
@@ -50,11 +50,6 @@
     font-size: 0.88889rem;
   }
 }
-
-/*dd.active {
-  border-top: 3px solid #3478b6;
-  margin-top: -3px;
-}*/
 
 .tabs dd.active a {
   background-color: #fff!important;
