--- a/assets/scss/_plugins.scss
+++ b/assets/scss/_plugins.scss
@@ -64,14 +64,14 @@ a.courses {
 }
 
 .isotope {
-  /* change duration value to whatever you like */
+  //change duration value to whatever you like
   -webkit-transition-duration: 0.8s;
   -moz-transition-duration: 0.8s;
   -ms-transition-duration: 0.8s;
   -o-transition-duration: 0.8s;
   transition-duration: 0.8s;
   .isotope-item {
-    /* change duration value to whatever you like */
+    //change duration value to whatever you like
     -webkit-transition-duration: 0.8s;
     -moz-transition-duration: 0.8s;
     -ms-transition-duration: 0.8s;
@@ -119,7 +119,7 @@ courses.isotope {
 }
 
 
-//Homepage Slider ------------------------------------
+//Homepage Slider
 #slider {
   background: url(../images/foundation/orbit/loading.gif) center center no-repeat;
   height: 300px;
@@ -158,9 +158,13 @@ div.orbit-wrapper div.timer, .orbit-timer {
 #caption {
   &.vertical {
     min-height: 425px;
-    position: absolute;
-    /*bottom:41px;*/
+    position: relative;
     bottom: 0;
+       .middle {
+          position: absolute;           
+          top: 50%;                        
+          transform: translate(0, -50%)   
+      }
   }
   &.horizontal {
     position: absolute;
@@ -183,11 +187,6 @@ div.orbit-wrapper div.timer, .orbit-timer {
 
 .orbit div.orbit-slide {
   left: 0 !important;
-}
-
-#caption.vertical .middle {
-  vertical-align: middle;
-  margin-top: 45%;
 }
 
 .orbit-wrapper {
