--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -33,6 +33,9 @@ footer {
     text-transform: uppercase;
     letter-spacing: 1px;
     text-align: center;
+     a {
+      font-size: 13px;
+     }
   }
   .flyout {
     background: #f2f2f2;
@@ -41,7 +44,7 @@ footer {
     border: 1px solid #d9d9d9;
     position: absolute;
     bottom: 0;
-    /*QUICKLINKS FLYOUT UP*/
+    //QUICKLINKS FLYOUT UP
     left: 0px;
     width: 200px;
     z-index: 40;
