--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -206,6 +206,42 @@ ol {
   }
 }
 
+
+@mixin border-radius($radius) {
+  border-radius: $radius;
+  background-clip: padding-box;  /* stops bg color from leaking outside the border: */
+}
+
+@mixin border-top-radius($radius) {
+  border-top-right-radius: $radius;
+  border-top-left-radius: $radius;
+}
+
+@mixin border-right-radius($radius) {
+  border-bottom-right-radius: $radius;
+  border-top-right-radius: $radius;
+  background-clip: padding-box;
+}
+@mixin border-bottom-radius($radius) {
+  border-bottom-right-radius: $radius;
+  border-bottom-left-radius: $radius;
+  background-clip: padding-box;
+}
+@mixin border-left-radius($radius) {
+  border-bottom-left-radius: $radius;
+  border-top-left-radius: $radius;
+  background-clip: padding-box;
+}
+@mixin border-top-left-radius($radius) {
+  border-top-left-radius: $radius;
+  background-clip: padding-box;
+}
+@mixin border-top-right-radius($radius) {
+  border-top-right-radius: $radius;
+  background-clip: padding-box;
+}
+
+
 .radius10 {
   //Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
   @include border-radius($radius);
