--- a/assets/scss/_mediaquery.scss
+++ b/assets/scss/_mediaquery.scss
@@ -154,19 +154,25 @@ p, ul, ol, dl {
   }
 }
 
-@media only screen and (min-width: 64.063em){
-p, ul, ol, dl {
-  font-size: 1.125rem;
-}
-  #mobile-nav {
+@media only screen and (max-width: 1023px) {
+    #desktop-nav {
     display: none;
   }
 }
 
-@media only screen and (max-width: 64em) {
-  #desktop-nav {
+@media only screen and (min-width: 1023px) {
+    #mobile-nav {
     display: none;
   }
+}
+
+@media only screen and (min-width: 64.063em){
+p, ul, ol, dl {
+  font-size: 1.125rem;
+}
+}
+
+@media only screen and (max-width: 64em) {
   #caption {
   &.vertical {
        .middle {       
