sidebar color fixes

--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -5,6 +5,8 @@
 img.featured {
   float: right;
   max-width: 110%;
+  height: auto;
+  display: block;
 }
 
 #sidebar_header {
@@ -131,22 +133,10 @@ ul.nav li {
   }
 }
 
-
-$from: #fcfcfc;
-$to: #cecece;
-$stop: 67%;
-
-@mixin horizontal-gradient($from, $to, $stop: 100%) {
-  /* fallback/image non-cover color */
-  background-color: $to;
-  /* Standard */
-  background: linear-gradient(to right, $from 0%, $to $stop);
-}
-
 .sidebar_bg {
   background: #cecece;
-  /*@include linear-gradient(#fcfcfc 0%, #ffffff 66.6%, #cecece 67%);*/
-  @include horizontal-gradient($from, $stop);
+  background: linear-gradient(to right, rgba(252,252,252,1) 0%,rgba(255,255,255,1) 67%,rgba(206,206,206,1) 67%,rgba(206,206,206,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#cecece', GradientType=1 );
   margin-bottom: 60px;
   .wrapper {
     margin-top: 0px;
