--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -7,6 +7,7 @@ $yellow: #cba052;     //yellow
 $rust: #6f2c3f;		    //rust
 $black: #2C2C33;     //black
 $flagship_icon: flagship-icon; //flagship icon
+$fa-font-path: "../fonts";
 
 $font-stack: 'gentona-light', Arial, sans-serif;
 $font-header: 'quadon', Arial, sans-serif;
