--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,5 +1,7 @@
 @import "settings";
 @import "foundation";
+@import 'fontawesome';
+
 @font-face {
   font-family: 'quadon';
   src: url('../fonts/quadon/Quadon-Medium.eot');
