--- a/assets/scss/_mediaquery.scss
+++ b/assets/scss/_mediaquery.scss
@@ -7,7 +7,7 @@
   }
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 20em) {
   .mobile-logo {
     img {
       width: 90%;
@@ -15,7 +15,7 @@
   }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 30em) {
   button {
     font-size: 14px;
   }
@@ -34,8 +34,7 @@
   }
 }
 
-
-@media only screen and (min-width: 481px) and (max-width:640px) {
+@media only screen and (min-width: 30.0625em) and (max-width:40em) {
     .mobile-logo {
     margin-top: 2em;
     img {
@@ -44,7 +43,7 @@
   }
 }
 
-@media only screen and (max-width: 540px) {
+@media only screen and (max-width: 33.75em) {
   #main_nav ul li {
     padding: 0 5px;
     width: auto;
@@ -69,12 +68,21 @@
 }
 
 @media only screen and (min-width: 40em) {
-p, ul, ol, dl {
-  font-size: 1.05rem;
-}
+  p, ul, ol, dl {
+    font-size: 1.05rem;
+  }
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 40em) {
+  .faculty {
+    padding-left: 1em;
+  }
+  .single-people .tabs dd a {
+    padding: .88889rem .7rem !important;
+  }
+}
+
+@media only screen and (max-width: 47.9375em) {
   #logo_nav {
     margin-top: 50px;
   }
@@ -146,32 +154,6 @@ p, ul, ol, dl {
   }
 }
 
-@media only screen and (min-width: 767px) and (max-width: 915px) {
-   #caption {
-    &.vertical {
-       .middle {       
-          top: 50%!important;                         
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 975px) {
-  #main_nav ul li {
-    padding: 0 7px;
-  }
-}
-
-@media only screen and (max-width: 40em) {
-  .faculty {
-    padding-left: 1em;
-  }
-  .single-people .tabs dd a {
-    padding: .88889rem .7rem !important;
-  }
-}
-
-
 @media only screen and (min-width: 40.063em) and (max-width: 64em) {
   .faculty {
     padding-left: 1em;
@@ -185,15 +167,44 @@ p, ul, ol, dl {
         width: 35%;
     }
   }
+  .wrapper {
+    p {
+      padding-right: 2em;
+      padding-left: 1em;
+    }
+  }
 }
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (min-width: 47.9375em) and (max-width: 57.1875em) {
+   #caption {
+    &.vertical {
+       .middle {       
+          top: 50%!important;                         
+      }
+    }
+  }
+   #sidebar {
+    p {
+      padding-right: 2em;
+      padding-left: 1em;
+    }
+   }
+}
+
+@media only screen and (max-width: 60.9375em) {
+  #main_nav ul li {
+    padding: 0 7px;
+  }
+}
+
+
+@media only screen and (max-width: 63.9375em) {
     #desktop-nav {
     display: none;
   }
 }
 
-@media only screen and (min-width: 1023px) {
+@media only screen and (min-width: 63.9375em) {
     #mobile-nav {
     display: none;
   }
@@ -201,7 +212,7 @@ p, ul, ol, dl {
 
 @media only screen and (min-width: 64.063em){
 p, ul, ol, dl {
-  font-size: 1.125rem;
+  font-size: 1.1rem;
 }
 }
 
@@ -226,58 +237,66 @@ p, ul, ol, dl {
   -moz-border-radius-bottomleft: 0px;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
-}
-.sidebar_bg {
-  background: #cecece !important;
-}
+  }
+  .sidebar_bg {
+    background: #cecece !important;
+  }
 
-#mobile-nav {
+  #mobile-nav {
       h2 {
-    font-size: 2rem;
+        font-size: 2rem;
+    }
+  }
+  .slideshow-wrapper {
+    padding-bottom: 2em;
+  }
+  #social-media {
+    margin-top: 9px;
   }
 }
-.slideshow-wrapper {
-padding-bottom: 2em;
-}
-#social-media {
-margin-top: 9px;
-}
-}
 
-@media only screen and (max-width: 1045px) {
+@media only screen and (max-width: 65.3125em) {
   html, body {
     overflow-x: hidden;
   }
 }
 
-
 @media only screen and (min-width: 86em) {
-p, ul, ol, dl {
-  font-size: 1.15rem;
-}
- h1, h2, h3, h4, h5, h6 {
-    line-height: 1.4; }
+  p, ul, ol, dl {
+    font-size: 1.15rem;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    line-height: 1.4; 
+  }
 
   h1 {
-    font-size: 2.5rem; }
+    font-size: 2.5rem; 
+  }
 
   h2 {
-    font-size: 2.225rem; }
+    font-size: 2.225rem; 
+  }
 
   h3 {
-    font-size: 1.6875rem; }
+    font-size: 1.6875rem; 
+  }
 
   h4 {
-    font-size: 1.4375rem; }
+    font-size: 1.4375rem; 
+  }
 
   h5 {
-    font-size: 1.125rem; }
+    font-size: 1.125rem; 
+  }
 
   h6 {
-    font-size: 1rem; } 
+    font-size: 1.05rem; 
+  } 
 }
+
 @media only screen and (min-width: 108em) {
-p, ul, ol, dl {
-  font-size: 1.175rem;
-} 
+  p, ul, ol, dl {
+    font-size: 1.2rem;
+  } 
 } 
