--- a/assets/scss/_plugins.scss
+++ b/assets/scss/_plugins.scss
@@ -327,7 +327,7 @@ p.contact {
   [class^="icon-"]:before, [class*=" icon-"]:before {
     vertical-align: middle;
     font-size: 18px;
-    color: #3478b6;
+    color: $blue;
     margin-right: 0px;
   }
 }
