lightened shade of grey for sidebar

--- a/assets/scss/_mediaquery.scss
+++ b/assets/scss/_mediaquery.scss
@@ -239,7 +239,7 @@ p, ul, ol, dl {
   border-bottom-left-radius: 0px;
   }
   .sidebar_bg {
-    background: #cecece !important;
+    background: #E5E2E0 !important;
   }
 
   #mobile-nav {
