--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -134,9 +134,9 @@ ul.nav li {
 }
 
 .sidebar_bg {
-  background: #cecece;
-  background: linear-gradient(to right, rgba(252,252,252,1) 0%,rgba(255,255,255,1) 67%,rgba(206,206,206,1) 67%,rgba(206,206,206,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#cecece', GradientType=1 );
+  background: #E5E2E0;
+  background: linear-gradient(to right, rgba(252,252,252,1) 0%,rgba(255,255,255,1) 67%,rgba(229,226,224,1) 67%,rgba(229,226,224,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#E5E2E0', GradientType=1 );
   margin-bottom: 60px;
   .wrapper {
     margin-top: 0px;
