--- a/assets/scss/_meanmenu.scss
+++ b/assets/scss/_meanmenu.scss
@@ -31,7 +31,7 @@ a.meanmenu-reveal {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
     text-align: left;
-    h3 {
+    h2, h3 {
       color: #FFF;
       font-size: 18px;
     }
