--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -100,3 +100,20 @@ p.wp-caption-text {
 a.button {
 color: white!important;
 }
+
+// style placeholder text cross browser
+    ::-webkit-input-placeholder {
+      color: $grey;
+    }
+
+    :-moz-placeholder { /* Firefox 18- */
+       color: $grey;
+    }
+
+    ::-moz-placeholder {  /* Firefox 19+ */
+       color: $grey;
+    }
+
+    :-ms-input-placeholder {
+       color: $grey;
+    }
