--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -2,12 +2,12 @@ footer {
   background: #000;
   padding-top: 25px;
   a {
-    color: #CCC;
+    color: $grey;
   }
 }
 
 .inline-list li a {
-  color: #CCC;
+  color: $grey;
 }
 
 #social-media {
@@ -93,7 +93,7 @@ footer {
   p {
     text-align: center;
     font-size: 12px;
-    color: #CCC;
+    color: $grey;
     margin: 20px 0 0px 0;
   }
 }
